--- a/src/pages/SalesDashboard/SalesDashboardMiddleArea/index.css
+++ b/src/pages/SalesDashboard/SalesDashboardMiddleArea/index.css
@@ -1,5 +1,5 @@
 .sales-dashboard-middle-area-container {
-    background-color: #F8FAFB;
+    background-color: var(--secondary-background);
     min-width: 33vw !important;
     max-width: 33vw !important;
     min-height: 90vh !important;
@@ -11,16 +11,11 @@
     gap: 2px;
     flex-direction: column;
     padding: 10px;
-    border: 1px solid black;
-}
-
-.sales-dashboard-middle-area-container.dark {
-    background-color: #121418;
-    border-color: white;
+    border: 1px solid var(--border-color);
 }
 
 .sales-dashboard-middle-area-products-scroll {
-    border: 1px solid black;
+    border: 1px solid var(--border-color);
     box-sizing: border-box;
     overflow-y: auto;
     padding: 0;
@@ -28,12 +23,7 @@
     flex-grow: 1;
     flex-basis: 0;
     max-height: 100%;
-    background-color: white;
-}
-
-.sales-dashboard-middle-area-products-scroll.dark {
-    border-color: white;
-    background-color: #111923;
+    background-color: var(--tertiary-background);
 }
 
 .sales-dashboard-middle-area-products {
@@ -45,18 +35,12 @@
     user-select: none;
     box-sizing: border-box;
     padding: 10px;
-    background-color: white;
+    background-color: var(--muted-color);
     width: 100%;
-    color: black;
+    color: var(--primary-text);
     border-radius: 20px;
-    border: 0.2px solid black;
+    border: 0.2px solid var(--border-color);
     border-top: none;
-}
-
-.sales-dashboard-middle-area-texts.dark {
-    background-color: black;
-    color: white;
-    border-color: white;
 }
 
 .sales-dashboard-middle-area-amount {
@@ -64,6 +48,6 @@
     justify-content: space-between;
 }
 
-hr.dark {
-    border-color: white;
+hr {
+    border-color: var(--border-color);
 }
