--- a/src/pages/MainContainer/index.css
+++ b/src/pages/MainContainer/index.css
@@ -6,15 +6,17 @@
     width: 100vw;
     height: 100vh;
     overflow: clip;
+    background-color: var(--primary-background);
+    color: var(--primary-text);
 }
 
 .main-container-header {
     z-index: 9999;
-    background-color: #F8FAFB;
+    background-color: var(--muted-color);
     user-select: none;
     padding: 0 10px;
     box-sizing: border-box;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid var(--border-color);
     height: 5vh;
     display: flex;
     align-items: center;
@@ -24,11 +26,11 @@
 
 .main-container-footer {
     z-index: 9999;
-    background-color: #F8FAFB;
+    background-color: var(--muted-color);
     user-select: none;
     padding: 0 10px;
     box-sizing: border-box;
-    border-top: 1px solid;
+    border-top: 1px solid var(--border-color);
     height: 5vh;
     display: flex;
     align-items: center;
@@ -44,28 +46,12 @@
     flex: 1;
     max-width: 100vw;
     max-height: 90vh;
-}
-
-.main-container-footer.dark {
-    background-color: rgb(28, 31, 37);
+    background-color: var(--primary-background);
 }
 
 .status-container {
     display: flex;
     flex-direction: column;
-}
-
-.main-container-header.dark {
-    background-color: rgb(28, 31, 37);
-}
-
-.main-container-body.dark {
-    color: white;
-    background-color: rgb(17, 20, 24);
-}
-
-.main-container-main.dark {
-    background-color: #131922;
 }
 
 .main-container-header.performance {
