--- a/src/pages/PaymentDashboard/PaymentDashboardRightArea/index.css
+++ b/src/pages/PaymentDashboard/PaymentDashboardRightArea/index.css
@@ -1,5 +1,5 @@
 .payment-dashboard-right-area-container {
-    background-color: #F8FAFB;
+    background-color: var(--secondary-background);
     min-width: 33vw !important;
     max-width: 33vw !important;
     min-height: 90vh !important;
@@ -11,14 +11,9 @@
     gap: 2px;
     flex-direction: column;
     padding: 10px;
-    border: 1px solid black;
+    border: 1px solid var(--border-color);
     align-content: space-between;
     justify-content: space-between;
-}
-
-.payment-dashboard-right-area-container.dark-theme {
-    background-color: #121418;
-    border-color: white;
 }
 
 .payment-dashboard-right-area-operator {
