--- a/src/pages/PurchaseReceipts/index.css
+++ b/src/pages/PurchaseReceipts/index.css
@@ -2,6 +2,8 @@
     position: relative;
     max-height: 90vh;
     overflow-x: auto;
+    background-color: var(--primary-background);
+    color: var(--primary-text);
 }
 
 .loading-container {
