--- a/src/pages/RefundDashboard/index.css
+++ b/src/pages/RefundDashboard/index.css
@@ -3,10 +3,10 @@
     position: relative;
     width: 100vw;
     height: 20vh;
-    background-color: #F8FAFB;
+    background-color: var(--tertiary-background);
     display: flex;
     flex-direction: row;
-    border: 1px solid;
+    border: 1px solid var(--border-color);
     padding: 1%;
     align-items: center;
 }
@@ -26,7 +26,7 @@
     position: relative;
     width: 100vw;
     height: 70vh;
-    background-color: #F8FAFB;
+    background-color: var(--primary-background);
     display: flex;
     flex-direction: row;
 }
@@ -34,7 +34,7 @@
 .refund-dashboard-upper-area-item {
     box-sizing: border-box;
     padding: 1%;
-    border: 1px solid;
+    border: 1px solid var(--border-color);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,45 +47,12 @@
     width: 100%;
     max-height: 100%;
     overflow-y: auto;
-    border: 1px solid;
+    border: 1px solid var(--border-color);
 }
 
-.refund-dashboard-dark {
-    color: white;
-}
-
-.refund-dashboard-light {
-    color: black;
-}
-
-.refund-dashboard-upper-area-item-dark {
-    background-color: #121418;
-}
-
-.refund-dashboard-upper-area-item-light {
-    background-color: #F8FAFB;
-}
-
-.refund-dashboard-upper-area-scroll-dark {
-    background-color: #131922;
-}
-
-.refund-dashboard-upper-area-scroll-light {
-    background-color: white;
-}
-
-.refund-dashboard-lower-area-container-dark {
-    background-color: #121418;
-    color: white;
-}
-
-.refund-dashboard-lower-area-container-light {
-    background-color: #F8FAFB;
-    color: black;
-}
 
 .refund-amount-color {
-    color: green;
+    color: var(--accent-color);
 }
 
 .refund-amount-dialog {
