--- a/src/pages/SalesDashboard/SalesDashboardRightArea/index.css
+++ b/src/pages/SalesDashboard/SalesDashboardRightArea/index.css
@@ -1,5 +1,5 @@
 .sales-dashboard-right-area-container {
-    background-color: #F8FAFB;
+    background-color: var(--secondary-background);
     min-width: 33vw !important;
     max-width: 33vw !important;
     min-height: 90vh !important;
@@ -11,7 +11,7 @@
     flex-direction: column;
     gap: 50px;
     padding: 10px;
-    border: 1px solid black;
+    border: 1px solid var(--border-color);
 }
 
 .sales-dashboard-right-area-control {
@@ -31,7 +31,7 @@
 }
 
 .sales-dashboard-right-area-campaigns {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid var(--border-color);
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -43,7 +43,7 @@
     padding: 0 10px 10px;
     width: 100%;
     gap: 5px;
-    background-color: #E8F5FC;
+    background-color: var(--secondary-background);
 }
 
 @keyframes jell-in-top {
@@ -87,7 +87,7 @@
 }
 
 .performance-mode .sales-dashboard-right-area-container {
-    background-color: #EEE;
+    background-color: var(--secondary-background);
     gap: 20px;
 }
 
