--- a/src/shared/components/ProductCard/productCard.css
+++ b/src/shared/components/ProductCard/productCard.css
@@ -11,6 +11,9 @@
     border-radius: 10px;
     transition: transform 0.2s;
     will-change: transform;
+    --active-border-color: green;
+    --text-color: #1976d2;
+    --sub-text-color: #BBBBBB;
 }
 
 .product-card-container.hover-scale:hover {
@@ -23,7 +26,7 @@
 }
 
 .product-card-container.simplified-hover:active {
-    border-color: green;
+    border-color: var(--active-border-color);
 }
 
 .product-card-img {
@@ -39,10 +42,10 @@
 }
 
 .product-card-text {
-    border-top: 1px solid gray;
+    border-top: 1px solid var(--active-border-color);
     font-size: 1em;
     background-color: rgba(255, 255, 255, 0.7);
-    color: #1976d2;
+    color: var(--text-color, #1976d2);
     position: absolute;
     transform: translateX(-50%);
     display: flex;
@@ -66,6 +69,10 @@
 
 .text-white {
     color: white;
+}
+
+.sub-text {
+    color: var(--sub-text-color);
 }
 
 .text-blue {
@@ -155,7 +162,7 @@
 }
 
 .product-card-click:active {
-    --c: green;
+    --c: var(--active-border-color, green);
 }
 
 .product-card-click.simplified-click {
