--- a/src/pages/SettingsDashboard/components/SettingsItem/settingsItem.css
+++ b/src/pages/SettingsDashboard/components/SettingsItem/settingsItem.css
@@ -11,6 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    user-select: none;
 }
 
 .settings-item:hover {
